<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bottom_content"
    android:orientation="vertical"
    android:paddingLeft="15.0dip"
    android:paddingRight="15.0dip" >

    <ImageView
        android:id="@+id/fragment_style_parameter_color_collapse"
        android:layout_width="30.0dip"
        android:layout_height="30.0dip"
        android:layout_gravity="right"
        android:background="@drawable/common_transparent_selector"
        android:scaleType="center"
        android:src="@drawable/icon_homepage_parameter_collapse" />

    <LinearLayout
        android:id="@+id/fragment_style_parameter_color_red"
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <TextView
            android:layout_width="80.0dip"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_parameter_color_red"
            android:textColor="@color/common_white" />

        <com.example.com.demo.view.CustomSeekBar
            android:id="@+id/fragment_style_parameter_color_red_seek"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_style_parameter_color_green"
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <TextView
            android:layout_width="80.0dip"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_parameter_color_green"
            android:textColor="@color/common_white" />

        <com.example.com.demo.view.CustomSeekBar
            android:id="@+id/fragment_style_parameter_color_green_seek"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_style_parameter_color_blue"
        android:layout_width="match_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <TextView
            android:layout_width="80.0dip"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_parameter_color_blue"
            android:textColor="@color/common_white" />

        <com.example.com.demo.view.CustomSeekBar
            android:id="@+id/fragment_style_parameter_color_blue_seek"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_color_size"
        android:layout_marginBottom="10.0dip"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/fragment_style_parameter_color_list_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:divider="@drawable/common_divider"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:showDividers="middle" >
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>